--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "data-uri-to-buffer": "0.0.3",
-    "ftp": "~0.3.5"
+    "ftp": "~0.3.5",
+    "debug": "~0.7.4"
   }
 }
