--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "data-uri-to-buffer": "0.0.3",
     "ftp": "~0.3.5",
     "debug": "~0.7.4"
+  },
+  "optionalDependencies": {
+    "readable-stream": "~1.1.0"
   }
 }
