--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "dependencies": {
     "data-uri-to-buffer": "0.0.3",
     "ftp": "~0.3.5",
-    "debug": "~0.7.4"
+    "debug": "~0.7.4",
+    "extend": "~1.2.1"
   },
   "optionalDependencies": {
     "readable-stream": "~1.1.0"
