--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "data-uri-to-buffer": "0.0.3",
     "ftp": "~0.3.5",
     "debug": "~0.7.4",
-    "extend": "~1.2.1"
+    "extend": "~1.2.1",
+    "file-uri-to-path": "0"
   },
   "optionalDependencies": {
     "readable-stream": "~1.1.0"
