--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "mocha": "~1.16.2",
     "stream-to-array": "~1.0.0",
-    "ftpd": "~0.2.4",
+    "ftpd": "0.2.4",
     "st": "~0.2.3"
   },
   "dependencies": {
