package: old npm compatible semver
No ^ usage

--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "url": "https://github.com/TooTallNate/node-get-uri/issues"
   },
   "devDependencies": {
-    "mocha": "^1.16.2",
-    "stream-to-array": "^1.0.0",
-    "ftpd": "0.2.4",
-    "st": "^0.2.3"
+    "mocha": ">= 1.16.2 && < 2",
+    "stream-to-array": "1",
+    "ftpd": ">= 0.2.4 && < 1",
+    "st": ">= 0.2.3 && < 1"
   },
   "dependencies": {
-    "data-uri-to-buffer": "^0.0.3",
-    "ftp": "^0.3.5",
-    "debug": "^0.8.0",
-    "extend": "^1.2.1",
+    "data-uri-to-buffer": "0",
+    "ftp": "~0.3.5",
+    "debug": "0",
+    "extend": "~1.2.1",
     "file-uri-to-path": "0",
-    "readable-stream": "^1.0.26-4"
+    "readable-stream": "~1.0.26-4"
   }
 }
