--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "data-uri-to-buffer": "0",
     "ftp": "~0.3.5",
     "debug": "2",
-    "extend": "~1.2.1",
+    "extend": "3",
     "file-uri-to-path": "0",
     "readable-stream": "~1.0.26-4"
   }
