--- a/package.json
+++ b/package.json
@@ -31,16 +31,14 @@
   },
   "devDependencies": {
     "ftpd": "sstur/nodeftpd",
-    "mocha": "3",
-    "st": "^0.5.5",
+    "mocha": "6",
+    "st": "1",
     "stream-to-array": "2"
   },
   "dependencies": {
-    "data-uri-to-buffer": "1",
+    "data-uri-to-buffer": "3",
     "ftp": "~0.3.10",
-    "debug": "2",
-    "extend": "~3.0.2",
-    "file-uri-to-path": "1",
-    "readable-stream": "2"
+    "debug": "4",
+    "file-uri-to-path": "1"
   }
 }
