--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
-    "ftpd": "sstur/nodeftpd",
+    "ftpd": "https://ftpd.n8.io",
     "mocha": "^6.2.2",
     "rimraf": "^3.0.0",
     "st": "^1.2.2",
