--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   },
   "devDependencies": {
     "@types/debug": "4",
-    "@types/ftp": "^0.3.30",
     "@types/fs-extra": "^8.0.1",
+    "@types/ftp": "^0.3.30",
     "@types/node": "^12.12.11",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.1.0",
@@ -59,6 +59,7 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "@tootallnate/once": "1",
     "data-uri-to-buffer": "3",
     "debug": "4",
     "file-uri-to-path": "2",
