--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,27 +14,15 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v1
-
+    - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8.3.1
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-
-    - name: Print Node.js Version
-      run: node --version
-
-    - name: Install Dependencies
-      run: npm install
-      env:
-        CI: true
-
-    - name: Run "build" step
-      run: npm run build --if-present
-      env:
-        CI: true
-
-    - name: Run tests
-      run: npm test
-      env:
-        CI: true
+        cache: 'pnpm'
+    - run: pnpm install --frozen-lockfile
+    - run: pnpm build
+    - run: pnpm test
