--- a/package.json
+++ b/package.json
@@ -37,24 +37,24 @@
     "url": "https://github.com/TooTallNate/node-get-uri/issues"
   },
   "devDependencies": {
-    "@types/debug": "4",
-    "@types/fs-extra": "^8.0.1",
+    "@types/debug": "^4.1.7",
+    "@types/fs-extra": "^8.1.2",
     "@types/ftpd": "^0.2.35",
     "@types/jest": "^29.5.1",
-    "@types/node": "^14.18.42",
+    "@types/node": "^14.18.43",
     "async-listen": "^2.1.0",
     "ftpd": "https://files-jg1s1zt9l.n8.io/ftpd-v0.2.14.tgz",
     "jest": "^29.5.0",
-    "rimraf": "^3.0.0",
+    "rimraf": "^3.0.2",
     "st": "^1.2.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@tootallnate/once": "2",
+    "@tootallnate/once": "^2.0.0",
     "basic-ftp": "^5.0.2",
-    "data-uri-to-buffer": "3",
-    "debug": "4",
+    "data-uri-to-buffer": "^3.0.1",
+    "debug": "^4.3.4",
     "fs-extra": "^8.1.0"
   },
   "engines": {
