--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
-    "test": "mocha --reporter spec",
+    "test": "jest",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -37,26 +37,27 @@
     "url": "https://github.com/TooTallNate/node-get-uri/issues"
   },
   "devDependencies": {
-    "@types/debug": "4",
-    "@types/fs-extra": "^8.0.1",
-    "@types/ftp": "^0.3.30",
-    "@types/node": "^12.12.11",
+    "@types/debug": "^4.1.7",
+    "@types/fs-extra": "^8.1.2",
+    "@types/ftpd": "^0.2.35",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^14.18.43",
+    "async-listen": "^2.1.0",
     "ftpd": "https://files-jg1s1zt9l.n8.io/ftpd-v0.2.14.tgz",
-    "mocha": "^6.2.2",
-    "rimraf": "^3.0.0",
+    "jest": "^29.5.0",
+    "rimraf": "^3.0.2",
     "st": "^1.2.2",
-    "stream-to-array": "2",
-    "typescript": "^4.4.3"
+    "ts-jest": "^29.1.0",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@tootallnate/once": "2",
-    "data-uri-to-buffer": "3",
-    "debug": "4",
-    "file-uri-to-path": "2",
-    "fs-extra": "^8.1.0",
-    "ftp": "^0.3.10"
+    "@tootallnate/once": "^2.0.0",
+    "basic-ftp": "^5.0.2",
+    "data-uri-to-buffer": "^3.0.1",
+    "debug": "^4.3.4",
+    "fs-extra": "^8.1.0"
   },
   "engines": {
-    "node": ">= 8"
+    "node": ">= 14"
   }
 }
